--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
           </h2>
           <img
-            src="./images/Imagen Paisaje Inicial.jpg"
+            src="./images/Imagen_Paisaje.jpg"
             alt="Paisaje Blanco y Negro"
             class="lead__image"
           />
