Updated project for first submission

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           src="./images/logo.svg"
           alt="logo TripleTen Gallery"
         />
-        <div class="header__lead">
+        <div class="lead">
           <h1 class="lead__title">De patria a patria</h1>
           <h2 class="lead__subtitle">
             Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
