Update project for firt submission

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,7 +24,7 @@
             Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
           </h2>
           <img
-            src="./images/Imagen_Paisaje.jpg"
+            src="./images/Imagen_Header.jpg"
             alt="Paisaje Blanco y Negro"
             class="lead__image"
           />
@@ -54,6 +54,248 @@
             arte visual dedicada a tu ciudad natal. No importa de dónde seas,
             nos alegra que seas nuestro vecino.
           </p>
+        </section>
+
+        <section class="photo-grid">
+          <img
+            class="photo-grid__image"
+            src="./images/Photo-grid/01_Item.png"
+            alt="Ciudad costera"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/Photo-grid/02_Item.png"
+            alt="Cricieth, Gales"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/Photo-grid/03_Item.png"
+            alt="Foto Atardecer Iglesia"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/Photo-grid/04_Item.png"
+            alt="Panorámica Ciudad Puente"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/Photo-grid/05_Item.png"
+            alt="Foto de Zona rural"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/Photo-grid/06_Item.png"
+            alt="Foto de antejardín"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/Photo-grid/07_Item.png"
+            alt="Vivienda Tradicional"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/Photo-grid/08_Item.png"
+            alt="Viviendas en zona rural"
+          />
+        </section>
+
+        <section class="places">
+          <div class="places__place">
+            <h2 class="place__title">Cricieth, Gales</h2>
+            <img
+              class="place__image"
+              src="./images/Places/Cricieth_Gales.png"
+              alt="Cricieth, Gales"
+            />
+            <div class="place__button">
+              <a
+                class="place__button-buy"
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                target="_blank"
+              >
+                Compra esta obra como NFT
+              </a>
+            </div>
+            <div class="place__artists-container">
+              <h3 class="place__artists-title">ARTISTAS</h3>
+              <p class="place__artists-authors">Steffan Warren, editor jefe</p>
+              <p class="place__artists-authors">
+                Kseniya Glagoleva, gerente de proyectos
+              </p>
+            </div>
+            <div class="place__description-container">
+              <p class="place__description-text">
+                Las ruinas medievales del castillo de Cricieth dominan la ciudad
+                desde una roca que extiende sobre el mar. Se cree que fue
+                construido por Llewelyn el Grande en el S. XIII. 800 años
+                después, la autodenominada Perla de Gales en las costas de
+                Snowdonia, se ha convertido en un popular destino turístico
+                durante los meses de verano.
+              </p>
+              <p
+                class="place__description-text place__description-text_line-heigth"
+              >
+                A pocos pasos de camino al castillo, puedes disfrutar de los
+                mejores helados del mundo en Cadwalader's, cuyo ingrediente
+                secreto se rumorea que son algas marinas de la localidad. Otra
+                cosa por la que es famosa Cricieth es por haber ganado el premio
+                *Gales en flor* durante cinco años seguidos por sus
+                espectaculares muestras florales alrededor de la ciudad. También
+                vio nacer a David Lloyd George, el único galés que ha sido
+                Primer Ministro del Reino Unido.
+              </p>
+            </div>
+          </div>
+
+          <div class="places__place">
+            <h2 class="place__title">Berea, EE. UU.</h2>
+            <img
+              class="place__image"
+              src="./images/Places/Berea_EEUU.png"
+              alt="Berea, EE. UU."
+            />
+            <div class="place__button">
+              <a
+                class="place__button-buy"
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                target="_blank"
+              >
+                Compra esta obra como NFT
+              </a>
+            </div>
+            <div class="place__artists-container">
+              <h3 class="place__artists-title">ARTISTAS</h3>
+              <p class="place__artists-authors">
+                Travis Turner, autor y editor
+              </p>
+            </div>
+            <div class="place__description-container">
+              <p class="place__description-text">
+                Berea es una pequeña ciudad ubicada en la parte central de
+                Kentucky. La ciudad está rodeada por hermosos bosques y campos.
+                Es conocida como la capital de la artesanía del estado, y sus
+                visitantes hallarán infinitas posibilidades para ir de compras:
+                tiendas de joyas, velas y artículos de madera artesanales;
+                galerías, talleres de vidrio y más. La ciudad celebra un
+                festival anual que rinde tributo al "spoonbread", un platillo
+                local hecho de pan de maíz y que se sirve con una cuchara de
+                madera.
+              </p>
+              <p
+                class="place__description-text place__description-text_line-heigth"
+              >
+                Aunque, probablemente es mejor conocida por su universidad. El
+                Berea College fue fundado en 1855 y fue la primera universidad
+                sureña integrada racialmente, así como la primera en ser
+                coeducacional. Algo que en cierta manera la hace única, es que
+                no cobra colegiatura: cada estudiante recibe una beca del 100%.
+              </p>
+            </div>
+          </div>
+
+          <div class="places__place">
+            <h2 class="place__title">Muramvya, Burundi</h2>
+            <img
+              class="place__image"
+              src="./images/Places/Muramvya_Burundi.png"
+              alt="Muramvya, Burundi"
+            />
+            <div class="place__button">
+              <a
+                class="place__button-buy"
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                target="_blank"
+              >
+                Compra esta obra como NFT
+              </a>
+            </div>
+            <div class="place__artists-container">
+              <h3 class="place__artists-title">ARTISTAS</h3>
+              <p class="place__artists-authors">
+                Grevisse Kenguruka, editor técnico
+              </p>
+            </div>
+            <div class="place__description-container">
+              <p class="place__description-text">
+                Muramvya es una de las 18 provincias de Burundi. Durante la
+                época del reino, Muramvya fue su capital; y en 2017, gracias a
+                su paisaje cultural y natural, se añadió a la Lista provisional
+                de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </p>
+              <p
+                class="place__description-text place__description-text_line-heigth"
+              >
+                Su clima es más bien frío durante la noche, pero durante el día,
+                podrías pensar que estás en el paraíso. A sus 2,665 metros
+                (8,743 ft) sobre el nivel del mar, el Monte Teza es uno de los
+                lugares más fríos de la provincia. Pero es justo esa brisa
+                fresca la que da pie a una de las más grandes plantaciones de té
+                y café del país, y que representa la mayoría de las
+                exportaciones de Burundi.
+              </p>
+              <p
+                class="place__description-text place__description-text_line-heigth"
+              >
+                El Parque nacional de Kibira, una de las mayores reservas de
+                vida silvestre para los simios, ocupa parte de cuatro
+                provincias, incluyendo Muramvya. Este parque nacional se
+                encuentra en las cúspides de las hermosas montañas de la
+                Divisoria Congo-Nilo, cuyas alturas oscilan entre 1,550 y 2,660
+                metros. Está lleno de hermosa vegetación, y es una fuente para
+                los diversos ríos y arroyos que proporcionan agua alrededor del
+                país.
+              </p>
+            </div>
+          </div>
+
+          <div class="places__place">
+            <h2 class="place__title">San Juan de Pasto, Colombia</h2>
+            <img
+              class="place__image"
+              src="./images/Places/Pasto.jpg"
+              alt="Pasto, Colombia"
+            />
+            <div class="place__button">
+              <a
+                class="place__button-buy"
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                target="_blank"
+              >
+                Compra esta obra como NFT
+              </a>
+            </div>
+            <div class="place__artists-container">
+              <h3 class="place__artists-title">ARTISTAS</h3>
+              <p class="place__artists-authors">Ximena Rodríguez, diseñadora</p>
+            </div>
+            <div class="place__description-container">
+              <p class="place__description-text">
+                Pasto se ubica en el suroccidente colombiano, en la región
+                Andina, en medio de la cordillera de los Andes en el macizo
+                montañoso denominado nudo de los Pastos y la ciudad está situada
+                en el denominado valle de Atriz, al pie del volcán Galeras y
+                está muy cercana a la línea del ecuador y a una altitud de 2527
+                metros sobre el nivel del mar.
+              </p>
+              <p
+                class="place__description-text place__description-text_line-heigth"
+              >
+                La festividad principal es el Carnaval de Negros y Blancos,
+                declarado Patrimonio Cultural de la Nación y en 2009 añadido
+                entre las listas del Patrimonio Oral e Inmaterial de la
+                Humanidad por la UNESCO; se celebra entre el 2 y el 7 de enero
+                de cada año, especialmente el 4 de enero (llegada de la familia
+                Castañeda), el 5 de enero (día de negros) y el 6 de enero (día
+                de blancos) anuales, con eventos y características que hacen de
+                estas fiestas únicas en el país y en el mundo. El Carnaval se
+                caracteriza por sus verbenas populares en calles y plazas,
+                desfiles de carrozas, comparsas y murgas con amplia implicación
+                popular.
+              </p>
+            </div>
+          </div>
         </section>
       </main>
       <footer class="footer">
