--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
           />
         </section>
 
-        <section class="places">
-          <div class="places__place">
+        <section class="place">
+          <div class="place__city">
             <h2 class="place__title">Cricieth, Gales</h2>
             <img
               class="place__image"
@@ -147,7 +147,7 @@
             </div>
           </div>
 
-          <div class="places__place">
+          <div class="place__city">
             <h2 class="place__title">Berea, EE. UU.</h2>
             <img
               class="place__image"
@@ -193,7 +193,7 @@
             </div>
           </div>
 
-          <div class="places__place">
+          <div class="place__city">
             <h2 class="place__title">Muramvya, Burundi</h2>
             <img
               class="place__image"
@@ -250,7 +250,7 @@
             </div>
           </div>
 
-          <div class="places__place">
+          <div class="place__city">
             <h2 class="place__title">San Juan de Pasto, Colombia</h2>
             <img
               class="place__image"
